--- a/audit/src/main/resources/application.properties
+++ b/audit/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #Database Configuration
 spring.jpa.hibernate.ddl-auto=none
 #Berbindung zur Datenbank URL
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/audit?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Bibliothek?serverTimezone=UTC
 #Name des Datenbank-Benutzers
 spring.datasource.username=root
 #Passwort des Datenbank-Benutzers
