--- a/audit/build.gradle
+++ b/audit/build.gradle
@@ -14,13 +14,17 @@ repositories {
 dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+
+	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
 
 	implementation 'com.auth0:java-jwt:4.2.2'
 
-	implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
 
 	runtimeOnly 'mysql:mysql-connector-java:8.0.28'
 
